objects/Product_Trial__c.object
<CustomObject>
    <fields>
        <fullName>Account_Billing_City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Country__c</fullName>
        <formula>Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_State__c</fullName>
        <formula>Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Street__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Customer_Class__c</fullName>
        <formula>Text(Account__r.Customer_Class_c__c)</formula>
        <label>Account Customer Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account__r.SAPAccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Postal_Code__c</fullName>
        <formula>Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Trials</relationshipLabel>
        <relationshipName>Product_Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Days__c</fullName>
        <formula>Trial_End_Date__c - Trial_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Trial_Users__c</fullName>
        <label>No. of Trial Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Link__c</fullName>
        <formula>HYPERLINK( SUBSTITUTE(LEFT($Api.Partner_Server_URL_90 , FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +Opportunity__c, &apos;-api&apos;, &apos;&apos;) ,Opportunity__r.Name)</formula>
        <label>Opportunity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Trials</relationshipLabel>
        <relationshipName>Product_Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Modules__c</fullName>
        <label>Product Modules</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HKUK PRM LW+LW RPT PDF-40890674+41067733</fullName>
                </value>
                <value>
                    <fullName>HKCA-40890664</fullName>
                </value>
                <value>
                    <fullName>WESTLAW HK-40890667</fullName>
                </value>
                <value>
                    <fullName>HKCN WLCHINA IP PRO BANDED-41034049</fullName>
                </value>
                <value>
                    <fullName>HKCN WLCHINA PW PRO BANDED-41034050</fullName>
                </value>
                <value>
                    <fullName>Westlaw Academic &amp; Government-41061141</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO HKCHITTY-41096040</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO ARCHBOLD HK ADDON-41220944</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO ARLIDGE-41064712</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO BENJAMIN-41064715</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO BOWSTEAD-41064720</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO BULLEN LEAKE &amp; JACOB-41064723</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO CHARLESWORTH-41064726</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO CHITTY-41064729</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO CLERK &amp; LINDSELL-41064732</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO DICEY-41064735</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO GATLEY-41064738</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO GOFF &amp; JONES-41064741</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO JACKSON-41064744</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO MCGREGOR-41064747</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO PHIPSON-41064750</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO ARLIDGE ACADEMIC-41064753</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO BENJAMIN ACADEMIC-41064782</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO BOWSTEAD ACADEMIC-41064785</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO CHARLESWORTH ACADEMIC-41064788</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO CHITTY ACADEMIC-41064791</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO CLERK &amp; LINDSELL ACAD-41064794</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO DICEY ACADEMIC-41064797</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO GATLEY ACADEMIC-41064800</fullName>
                </value>
                <value>
                    <fullName>HKUK PRO GOFF &amp; JONES ACADEMIC-41064803</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Westlaw HK</fullName>
                </value>
                <value>
                    <fullName>Westlaw China</fullName>
                </value>
                <value>
                    <fullName>Westlaw AU</fullName>
                </value>
                <value>
                    <fullName>Westlaw Malaysia</fullName>
                </value>
                <value>
                    <fullName>Westlaw India</fullName>
                </value>
                <value>
                    <fullName>Westlaw Japan</fullName>
                </value>
                <value>
                    <fullName>Westlaw NEXT</fullName>
                </value>
                <value>
                    <fullName>Westlaw Intl</fullName>
                </value>
                <value>
                    <fullName>LawnB</fullName>
                </value>
                <value>
                    <fullName>RIA Checkpoint</fullName>
                </value>
                <value>
                    <fullName>Checkpoint World</fullName>
                </value>
                <value>
                    <fullName>Lawtel Precedents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>In Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Start_Date__c</fullName>
        <label>Trial Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>opty_test__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Opportunity__c,Opportunity__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>opty test</label>
        <type>Text</type>
    </fields>
    <label>Product Trial</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Trial ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Trials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Approval_Status_Update</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( $User.Id = OwnerId || Contains($User.Username,&apos;kelly.ocallaghan@thomsonreuters.com&apos;) || CONTAINS($User.Username, &apos;michael.a.walter&apos;) ) &amp;&amp; ( ISPICKVAL(Status__c , &apos;Approved&apos;) || ISPICKVAL(Status__c , &apos;Rejected&apos;)) &amp;&amp;  ISCHANGED(Status__c )</errorConditionFormula>
        <errorMessage>Only Approvers can change the Status to  Approved or Rejected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Trial_End_Date_Must_be_after_Trial_Start</fullName>
        <active>true</active>
        <description>Trial End Date Must be after Trial Start Date</description>
        <errorConditionFormula>Trial_End_Date__c &lt; Trial_Start_Date__c</errorConditionFormula>
        <errorMessage>Trial End Date Must be after Trial Start</errorMessage>
    </validationRules>
</CustomObject>